<resources>
    <string name="app_name">CST496978</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="agt">AGT</string>
    <string name="ballroom">BallRoom</string>
    <string name="itc_hall">ITC Hall</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="select_the_type_of_event">Select the type of Event</string>
</resources>